--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
+    implementation group: 'com.google.android.material', name: 'material', version: '1.1.0-alpha10'
+
+    implementation 'com.shobhitpuri.custombuttons:google-signin:1.0.0'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
