--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.MyApp"
+
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SignInActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".SignInActivity"
+            android:screenOrientation="landscape">
+        </activity>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
