--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApp"
-
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SignInActivity"
-            android:screenOrientation="landscape">
-        </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".GameActivity"></activity>
+        <activity
+            android:name=".SignInActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
